# 42_minishell

./: .gitignore  1  3  CMakeLists.txt  Makefile  README.md  asdf  check_leaks.sh  diffgit  f  f1  file  file1   file2  gitdiff  in  ls  minishell  out  rdr  sdfs  signals  test.c  update  xxxxxx
inc/: minishell.h  minishell_a.h  minishell_s.h  minishell_struct.h
msh_tester/: minishell  test.sh
src/: main.c  minishell  minishell.c  ms_malloc_x.c  ms_print_envp.c  ms_return_error.c
src/builtins/: ms_cd.c  ms_cd_utils.c  ms_echo.c  ms_env.c  ms_exit.c  ms_export.c  ms_export_utils.c  ms_pwd.c  ms_unset.c  out_bash  out_msh
src/commands/: ms_builtin.c  ms_command.c  ms_dups.c  ms_error.c  ms_in_out.c  ms_path.c  ms_pipe.c  ms_redirects.c
src/libft/: Makefile
src/libft/inc/: libft.h
src/libft/src/: ft_atoi.c  ft_free_array.c  ft_isprint.c  ft_malloc_x.c  ft_strcmp.c  ft_strlen.c
src/parcer/: parser
src/parser/: main_parser.c  main_parser_DEL.c  ms_check_redirect.c  ms_clone_envp.c  ms_cut_arguments.c  ms_extract_redirects.c  ms_get_commands.c  ms_get_commands.h  ms_handle_digital_key.c  ms_isredirect.c  ms_manage_dollar.c  ms_manage_whitespaces.c  ms_parse.c  ms_pass_whitespaces.c  ms_protoparse.c  ms_purify_argument.c  ms_set_redirect_flags.c  ms_split_line.c  parser
src/signals/: ms_signals.c  ms_signals_interactive_shell.c  ms_signals_non_interactive_shell.c  test_sig.hhh
src/utils/: list_utils.c  ms_arglist_to_array.c  ms_arrlen.c  ms_cp_envp.c  ms_envp_l_utils.c  ms_envp_m_utils.c  ms_envplist_to_array.c  ms_find_envp.c  ms_lstclear_arg.c  ms_lstclear_cmd.c  ms_lstclear_envp.c  ms_lstfree_arg.c  ms_lstfree_cmd.c  ms_lstfree_rdr.c  ms_malloc_x.c  ms_return_error.c  ms_update_shlvl.c
